--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "framer-motion": "^11.1.7",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
